[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.2.1"
actix-cors="0.6.4"
serde= {version="1.0.152", features=["derive"]}
env_logger="0.10.0"
log="0.4.17"
derive_more = "0.99"
sqlx= { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
dotenv="0.15.0"
oauth2="4.3.0"
actix-session={version="0.7.2", features = ["cookie-session"]}
base64="0.20.0"
reqwest = {version = "0.11.13", features=["json"]}
serde_json="1.0.91"
anyhow="1.0.68"